<resources>
    <string name="app_name">ShareBySocial</string>
    <string name="qr_disc">It is a Qr code</string>
    <string name="face_disc">facebook icon</string>
    <string name="linkedin_disc">linkedin app icon</string>
    <string name="insta_disc">Instagram icon description</string>
    <string name="snap_disc">snap chat disc</string>
    <string name="github_disc">github icon disc</string>
    <string name="twitter_disc">twitter icon disc</string>
    <string name="greeting">Hi!</string>
    <string name="user_name">Robert W</string>
    <string name="notification_desc">notification icon desc</string>
    <string name="qr_btn">qr btn description</string>
    <string name="search_btn_desc">search btn desc</string>
    <string name="home">Home</string>
    <string name="radar">Radar\n</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="history">History\n</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="all_saved_profiles">All Saved Profiles</string>
    <string name="social_media_name">Facebook</string>
    <string name="back_btn">add page back button</string>
    <string name="add_account_activity_id">Add Account</string>
    <string name="social_share_default_icon">Social share default icon</string>
    <string name="account_name">Account Name</string>
    <string name="enter_account_name">Select account name</string>
    <string name="profile_icon">profile icon</string>
    <string name="instagram">Instagram</string>
    <string name="username_title">User Name</string>
    <string name="userName_field">share.1998</string>
    <string name="cancle">Clear</string>
    <string name="save">Save\n</string>
    <string name="save_btn">Save</string>
    <string name="user_name_hint">Profile Link</string>

    <!--    Application Name -->
    <string name="fb">Facebook</string>
    <string name="insta">Instagram</string>
    <string name="git">GitHub</string>
    <string name="twitter">Twitter</string>
    <string name="snap">Snapchat</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="reddit">Reddit</string>
    <string name="linkedin">Linkedin</string>
    <string name="tiktok">TikTok</string>
    <string name="yt">YouTube</string>
    <string name="pinterest">Pinterest</string>
    <string name="quora">Quora</string>
    <string name="tumblr">Tumblr</string>
    <string name="twitch">Twitch</string>
    <string name="discord">Discord</string>
    <string name="mastodon">Mastodon</string>
    <string name="vkontakte">VKontakte</string>
    <string name="weibo">Weibo</string>
    <string name="talk">KakaoTalk</string>
    <string name="web">Website</string>
    <string name="email">Email</string>
    <string name="other">Other</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit\n</string>
    <string name="delete_icon">delete icon</string>
    <string name="search_sheet_title">Scanning Result...</string>
    <string name="full_user_name">Allard Romania</string>
    <string name="gettingLocation">Accessing Location...</string>
    <string name="register_profile">Register Profile</string>
    <string name="name">Name</string>
    <string name="user_id">Vagabon</string>
    <string name="email_id">Email Id</string>
    <string name="sample_email">vagabon@gmail.com</string>
    <string name="password_title">Password</string>
    <string name="sample_password">********</string>
    <string name="already_have_account">Already have a account ?</string>
    <string name="done">Done</string>
    <string name="or">or</string>
    <string name="google_login">With Google</string>
    <string name="login_profile">Login To Profile</string>
    <string name="no_account">Don\'t have any account ?</string>
    <string name="login_btn">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="google">Google</string>
    <string name="f_password">Forgot password ?</string>
    <string name="google_sign_in">Google sign in icon</string>
    <string name="google_title">Google</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="night_mode">Night Mode</string>
    <string name="report_issue">Report Issue</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About us?</string>
    <string name="logout">logout</string>
    <string name="android_back_button">andriod back button</string>
    <string name="info_btn">info btn</string>
    <string name="hi">Hi !</string>
    <string name="friend_greeting">I am Jhon Smith</string>
    <string name="connect_with_me">Connect with me</string>
    <string name="qr_code">QR Code</string>
    <string name="scan_qr">Scan QR</string>
    <string name="image_search_button">Image search button</string>
    <string name="search_your_friends">Search Your Friends</string>
    <string name="date">29 - 04 - 23</string>
    <string name="history_user_name">Rajesh Bhadra</string>
    <string name="history_fs">History</string>
    <string name="hint">https://www.xyz.com/vagabon_09/</string>
    <string name="distance">0 m / 500 m</string>
    <string name="radar_info">radar info details</string>
    <string name="invisible_btn">invisible btn</string>
    <string name="visible_btn">visible btn</string>
    <string name="location_limit"><![CDATA[< 500 m]]></string>
    <string name="last_update">12 : 00 PM</string>
    <string name="radar_page_info">Welcome to the hub of real-time connections! On this page, discover fellow users who are currently within a 500-meter radius or have recently been in the vicinity. Seamlessly forge connections through various social media platforms and open doors to new friendships. Engage, chat, and create meaningful bonds with those who share your local experiences. Start connecting and expanding your network right where you are.</string>
    <string name="meaning_of_the_icons">Meaning of the Icons</string>
    <string name="friend_info">Discover more about your friends and connections! On this page, you can view all the social media profiles of the targeted user. Just tap on the profile icons to instantly access their profiles. Dive into their online presence and get to know them better. It\'s your gateway to understanding your connections on a whole new level.</string>


</resources>