<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SplashScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/qr_disc"
        android:src="@drawable/qr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/circle_1"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/splash_circle"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <View
        android:id="@+id/circle_2"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:background="@drawable/splash_circle"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <View
        android:id="@+id/circle_3"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/splash_circle"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/facebookIconId"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/face_disc"
        android:src="@drawable/facebook"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/circle_3"
        app:layout_constraintTop_toTopOf="@+id/circle_3" />

    <ImageView
        android:id="@+id/linkedinIconId"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:contentDescription="@string/linkedin_disc"
        android:src="@drawable/linkedin"
        app:layout_constraintBottom_toBottomOf="@+id/circle_3"
        app:layout_constraintEnd_toEndOf="@+id/circle_2"
        app:layout_constraintStart_toEndOf="@+id/circle_2"
        app:layout_constraintTop_toTopOf="@+id/circle_3" />

    <ImageView
        android:id="@+id/instagramIconId"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/insta_disc"
        android:src="@drawable/instagram"
        app:layout_constraintBottom_toTopOf="@+id/linkedinIconId"
        app:layout_constraintEnd_toEndOf="@+id/circle_3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813" />


    <ImageView
        android:id="@+id/snapchatIconId"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:contentDescription="@string/snap_disc"
        android:src="@drawable/snapchat"
        app:layout_constraintBottom_toBottomOf="@+id/circle_3"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/circle_2"
        app:layout_constraintTop_toTopOf="@+id/circle_1"
        app:layout_constraintVertical_bias="0.29" />

    <ImageView
        android:id="@+id/githubIconId"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:contentDescription="@string/github_disc"
        android:src="@drawable/github"
        app:layout_constraintBottom_toBottomOf="@+id/circle_3"
        app:layout_constraintEnd_toStartOf="@+id/snapchatIconId"
        app:layout_constraintStart_toStartOf="@+id/circle_3"
        app:layout_constraintTop_toBottomOf="@+id/snapchatIconId" />


    <ImageView
        android:id="@+id/twitterIconId"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:src="@drawable/twitter"
        app:layout_constraintBottom_toBottomOf="@+id/circle_3"
        app:layout_constraintEnd_toEndOf="@+id/circle_3"
        app:layout_constraintHorizontal_bias="0.704"
        app:layout_constraintStart_toEndOf="@+id/githubIconId"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/twitter_disc" />

</androidx.constraintlayout.widget.ConstraintLayout>