<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".Fragment.AddFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/add_page_back_btn"
        android:layout_width="@dimen/_23sdp"
        android:layout_height="@dimen/_23sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/back"
        android:contentDescription="@string/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_account_activity_id"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="@+id/add_page_back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_page_back_btn"
        app:layout_constraintTop_toTopOf="@+id/add_page_back_btn" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:contentDescription="@string/social_share_default_icon"
        android:src="@drawable/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:text="@string/account_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_17sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <com.skydoves.powerspinner.PowerSpinnerView
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/ash_2"
        android:gravity="center"
        android:hint="@string/enter_account_name"
        android:padding="@dimen/_6sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:spinner_arrow_gravity="end"
        app:spinner_arrow_padding="8dp"
        app:spinner_arrow_tint="@color/black"
        app:spinner_divider_color="@color/black"
        app:spinner_divider_show="true"
        app:spinner_divider_size="0.4dp"
        app:spinner_item_height="46dp"
        app:spinner_popup_animation="dropdown"
        app:spinner_popup_background="@color/white"
        app:spinner_popup_elevation="14dp" />


</androidx.constraintlayout.widget.ConstraintLayout>