<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activities.BottomSheetfFragment">

    <View
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/view"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_10sdp"
        android:background="@drawable/line_shape"
        app:layout_constraintEnd_toEndOf="@+id/deleteBtnId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/deleteBtnId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:contentDescription="@string/delete_icon"
            android:src="@drawable/delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50sdp"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textSize="@dimen/_17sdp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/editButtonId"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteBtnId">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:src="@drawable/writing" />

        <TextView
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edit"
            android:textSize="@dimen/_17sdp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>